force-app/main/default/objects/Session_Program__c/Session_Program__c.object-meta.xml
<CustomObject>
    <label>Session-Program</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Session-Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session-Program</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>