force-app/main/default/objects/Session_Program__c/fields/Current_Objective__c.field-meta.xml
<CustomField>
    <fullName>Current_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Session-Program</relationshipLabel>
    <relationshipName>Session_Program</relationshipName>
    <type>Lookup</type>
</CustomField>