force-app/main/default/objects/Session_Program__c/fields/Session_Goals__c.field-meta.xml
<CustomField>
    <fullName>Session_Goals__c</fullName>
    <label>Session Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>