force-app/main/default/objects/Session_Program__c/fields/Session_SD__c.field-meta.xml
<CustomField>
    <fullName>Session_SD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session SD</label>
    <referenceTo>SD__c</referenceTo>
    <relationshipLabel>Session-Program</relationshipLabel>
    <relationshipName>Session_Program</relationshipName>
    <type>Lookup</type>
</CustomField>